2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/term-styled-ostream: New file.
	* lib/term-styled-ostream.oo.c: New file.
	* lib/term-styled-ostream.oo.h: New file.
	* Makefile.am (EXTRA_DIST): Add the new files.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/html-styled-ostream: New file.
	* lib/html-styled-ostream.oo.c: New file.
	* lib/html-styled-ostream.oo.h: New file.
	* Makefile.am (EXTRA_DIST): Add the new files.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/styled-ostream: New file.
	* lib/styled-ostream.oo.c: New file.
	* lib/styled-ostream.oo.h: New file.
	* Makefile.am (EXTRA_DIST): Add the new files.

2006-12-11  Bruno Haible  <bruno@clisp.org>

	Portability to BeOS.
	* lib/term-ostream.oo.c (term_ostream_create) [BeOS]: Correct the
	values of stream->set_a_foreground and stream->set_a_background.

2006-12-11  Bruno Haible  <bruno@clisp.org>

	Portability to systems with GNU termcap.
	* m4/termcap.m4 (gl_TERMCAP_BODY): Also test for the tparam function.
	* lib/termcap.h (tparam): New declaration.
	* lib/term-ostream.oo.c (tparambuf): New variable.
	(tparm): Define in terms of tparam when tparam exists.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/term-ostream: Depend on termcap-h, not termcap.
	* lib/term-ostream.oo.c: Include termcap.h.
	(tgetent, tgetnum, tgetflag, tgetstr, tparm, tgoto, tputs): Remove
	declarations.

	Move termcap function declarations to a header file.
	* modules/termcap-h: New file.
	* lib/termcap.h: New file.
	* Makefile.am (EXTRA_DIST): Add the new files.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* modules/moo-tests: New file.
	* tests/test-moo-aroot.oo.c: New file.
	* tests/test-moo-aroot.oo.h: New file.
	* tests/test-moo-assign.c: New file.
	* tests/test-moo-asub1.oo.c: New file.
	* tests/test-moo-asub1.oo.h: New file.
	* tests/test-moo-root.oo.c: New file.
	* tests/test-moo-root.oo.h: New file.
	* tests/test-moo-sub1.oo.c: New file.
	* tests/test-moo-sub1.oo.h: New file.